Code rearrangement &  refactoring